# text_nav_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: nav2_params.yaml  nav2_sim_params.yaml  realsense_d455_tfs.yaml
include/text_nav_bridge/: text_nav_bridge_node.hpp  text_similarity.hpp
launch/: text_nav.launch.py  text_nav_sim.launch.py
rviz/: text_nav.rviz  text_nav_rtabmap.rviz  text_nav_sim.rviz
src/: main.cpp  text_nav_bridge_node.cpp
