<?xml version="1.0"?>
<package format="3">
  <name>text_nav_bridge</name>
  <version>0.0.1</version>
  <description>Text-based navigation bridge: loads text landmarks and sends Nav2 goals</description>
  <maintainer email="contact@kc-ml2.com">KC-ML2</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>textmap</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
